# HackYeah_2025

./: .gitignore  Dockerfile  README.md  ai.py  combine_data.py  create_google_form.py  event_creator.py  index.html  jsonl.py  pyproject.toml
src/: calend.py  event_creator.py  forms.py  google_calendar_dataclasses.py  google_dataclases.py  hello.py
